# advent-of-code

./: .README.md.swp  .gitignore  .gitpod.Dockerfile  .gitpod.yml  LICENSE  README.md  download-inputs.sh  first_build.sh  new-day.sh  run-all.sh  upload-inputs.sh
2015/day01/: day01.cabal
2015/day02/: answers.txt  day02.cabal
2015/day03/: answers.txt  day03.cabal
2015/day04/: answers.txt  day04.cabal
2015/day05/: answers.txt  day05.cabal
2015/day06/: answers.txt  day06.cabal
2015/day07/: answers.txt  day07.cabal
2015/day08/: answers.txt  day08.cabal
2015/day09/: answers.txt  day09.cabal
2015/day10/: answers.txt  day10.cabal
2015/day11/: answers.txt  day11.cabal
2015/day12/: answers.txt  day12.cabal
2015/day13/: answers.txt  day13.cabal
2020/day01/: answers.txt  day01.cabal
2020/day02/: answers.txt
2020/day03/: answers.txt  day03.cabal
2020/day04/: answers.txt  cabal.project  day04.cabal
2020/day05/: answers.txt  day05.cabal
2020/day06/: answers.txt  day06.cabal
2020/day07/: answers.txt  day07.cabal
2020/day08/: answers.txt  day08.cabal
2020/day09/: answers.txt  day09.cabal  input.txt
2020/day10/: answers.txt  day10.cabal
2020/day11/: answers.txt  day11.cabal
2020/day12/: answers.txt  (+1 more)
aoc-kotlin/: build.gradle.kts  newDay.sh  settings.gradle.kts
libs/advent/: CHANGELOG.md  LICENSE  advent.cabal
libs/advent/src/: .Advent.hs.swp  .RangeMap.hs.swp  Advent.hs  RangeMap.hs
libs/advent/test/: AdventTest.hs
notes/: .how-does-state-work.md.swp  classes.dot  classes.md  even-composition-is-lazy.md  how-does-state-work.md
(+282 files in other folders)
